--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Meera+Inimai&display=swap" rel="stylesheet">
-    <title>Hola mundo</title>
+    <title>CALCAPTO</title>
 </head>
 <body>
-    
+
     <div id="app">
         
     </div>
